--- a/index.html
+++ b/index.html
@@ -444,7 +444,7 @@ Invited as ICDM 2019 External Reviewer!
 <li>
 <p>
 <strong>Bachelor in Electrical Engineering</strong> , <em>Beijing Institute of Technology</em>, 2011.08 - 2015.06
-</p><p> Rank 1/273, GPA: 93.73/100 </p>
+</p><p> Rank 1/273 </p>
 <p></p>
 </li>
 
