--- a/index.html
+++ b/index.html
@@ -561,7 +561,7 @@ Peng Gao, <strong>Pan Lu</strong>, Hongsheng Li, Shuang Li, Yikang Li, Steven Ho
   </p>
 <p>
   <strong>AAAI, 2018 (Full Paper, Spotlight)</strong> 
-  [<a href="https://lupantech.github.io/files/AAAI18_dualvqa.pdf">pdf</a>] 
+  [<a href="https://lupantech.github.io/files/papers/AAAI18_dualvqa.pdf">pdf</a>] 
   [<a href="https://github.com/lupantech/dual-mfa-vqa">code</a>] 
   [<a href="https://github.com/lupantech/lupantech.github.io/raw/master/files/papers/aaai18_poster_final.pdf">poster</a>]
 </p>
