--- a/index.html
+++ b/index.html
@@ -392,16 +392,19 @@ asciidoc.install();
 <img src="./files/panlu.jpg" alt="Pan Lu" width="160">
 </div>
 </div>
+
+
 <div class="paragraph"><p>
-  I received my Science Master degree in Department of Computer Science and Technology of Tsinghua University, supervised by <a href="http://dbgroup.cs.tsinghua.edu.cn/wangjy/">Prof. Jianyong Wang</a>. I received my B.Eng. degree in School of Automation, Beijing Institute of Technology (BIT), 2015. 
+  I am a first year PhD student in Computer Science Department, University of California, Los Angeles. I become a member of  <a href="https://vcla.stat.ucla.edu/">Center for Vision, Cognition, Learning and Autonomy</a>, 2019. My supervisor is Professor <a href="http://www.stat.ucla.edu/~sczhu/"> Song-Chun Zhu</a>. Before that, I received my Science Master degree in Department of Computer Science and Technology of Tsinghua University, supervised by Professor <a href="http://dbgroup.cs.tsinghua.edu.cn/wangjy/">Jianyong Wang</a>. I received my B.Eng. degree in School of Automation, Beijing Institute of Technology (BIT), 2015. 
 </p></div>
+
 <div class="paragraph"><p>
-  I was a research intern with NLC Group, MSRA from Nov. 2017 to May 2018, working with <a href="https://www.microsoft.com/en-us/research/people/leiji/">Dr. Lei Ji</a>, <a href="https://www.microsoft.com/en-us/research/people/nanduan/">Nan Duan</a> and <a href="https://www.microsoft.com/en-us/research/people/mingzhou/">Ming Zhou</a>.
-  Before that, I was a visiting student with <a href="http://mmlab.ie.cuhk.edu.hk/index.html">Multimedia Laboratory, CUHK</a> from Aug 2016 to Oct 2017, working with <a href="http://www.ee.cuhk.edu.hk/~hsli/">Prof. Hongsheng Li</a> and <a href="http://www.ee.cuhk.edu.hk/~xgwang/">Xiaogang Wang</a>.
+  I was a research intern with NLC Group, MSRA from Nov. 2017 to May 2018, working with Dr. <a href="https://www.microsoft.com/en-us/research/people/leiji/">Lei Ji</a>, <a href="https://www.microsoft.com/en-us/research/people/nanduan/">Nan Duan</a> and <a href="https://www.microsoft.com/en-us/research/people/mingzhou/">Ming Zhou</a>.
+  Before that, I was a visiting student with <a href="http://mmlab.ie.cuhk.edu.hk/index.html">Multimedia Laboratory, CUHK</a> from Aug 2016 to Oct 2017, working with Professor <a href="http://www.ee.cuhk.edu.hk/~hsli/">Hongsheng Li</a> and <a href="http://www.ee.cuhk.edu.hk/~xgwang/">Xiaogang Wang</a>.
 </p></div>
 <div class="paragraph"><p>
 
-I am interested in <strong>Computer Vision</strong> (like Visual Question Answering), <strong>NLP</strong>, <strong>Data Mining</strong>, especially in <strong>Learning and Reasoning</strong> for vision, language, common sense and action.
+I am interested in <strong>computer vision</strong>, <strong>natural language understanding</strong>, <strong>data mining</strong>, especially in multimodal learning and reasoning for vision, language, knowledge, cognition and action.
 </p></div>
 </div>
 </div>
