--- a/index.html
+++ b/index.html
@@ -399,7 +399,7 @@ asciidoc.install();
 </p></div>
 
 <div class="paragraph"><p>
-  I was a research intern with NLC Group, MSRA from Nov. 2017 to May 2018, working with Dr. <a href="https://www.microsoft.com/en-us/research/people/leiji/">Lei Ji</a>, <a href="https://www.microsoft.com/en-us/research/people/nanduan/">Nan Duan</a> and <a href="https://www.microsoft.com/en-us/research/people/mingzhou/">Ming Zhou</a>.
+  I was a research intern with the NLC Group, MSRA from Nov. 2017 to May 2018, working with Dr. <a href="https://www.microsoft.com/en-us/research/people/leiji/">Lei Ji</a>, <a href="https://www.microsoft.com/en-us/research/people/nanduan/">Nan Duan</a> and <a href="https://www.microsoft.com/en-us/research/people/mingzhou/">Ming Zhou</a>.
   Before that, I was a visiting student with <a href="http://mmlab.ie.cuhk.edu.hk/index.html">Multimedia Laboratory, CUHK</a> from Aug 2016 to Oct 2017, working with Professor <a href="http://www.ee.cuhk.edu.hk/~hsli/">Hongsheng Li</a> and <a href="http://www.ee.cuhk.edu.hk/~xgwang/">Xiaogang Wang</a>.
 </p></div>
 <div class="paragraph"><p>
@@ -415,8 +415,13 @@ I am interested in <strong>computer vision</strong>, <strong>natural language un
 <div class="ulist"><ul>
 <li>
 <p>
-Invited as ICDM 2019 External Reviewer!
-<p></p>
+One full paper was accepted by AAAI 2020!
+</p>
+</li>
+<li>
+<p>
+Invited as ICDM 2019 External Reviewer.
+</p>
 </li>
 
 
@@ -636,6 +641,19 @@ Peng Gao, <strong>Pan Lu</strong>, Hongsheng Li, Shuang Li, Yikang Li, Steven Ho
 
 <li>
 <p>
+NeurIPS Student Scholarship, 2019
+</p>
+</li>
+
+<li>
+<p>
+ICCV Student Scholarship, 2019
+</p>
+</li>
+
+
+<li>
+<p>
 Outstanding Master Degree Thesis of Tsinghua University, 2018
 </p>
 </li>
@@ -754,7 +772,7 @@ Top publications - Google Scholar Metrics
 
 <div id="footer">
 <div id="footer-text">
-Last updated 2019-01-18
+Last updated 2019-11-30
 </div>
 </div>
 
