--- a/index.html
+++ b/index.html
@@ -776,6 +776,7 @@ Last updated 2019-11-30
 </div>
 </div>
 
+<script type="text/javascript" id="clustrmaps" src="//cdn.clustrmaps.com/map_v2.js?d=kM7hb210psDEOVXSuHck6GmcfISVxTpZ0I6EmgBHZMQ&cl=ffffff&w=a"></script>
 
 
 </div></body></html>
