polish new template: layout, bibs, icons

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 
+<!-- Color: https://htmlcolorcodes.com/zh/yanse-ming/ -->
 
 <head>
 	<!-- Global site tag (gtag.js) - Google Analytics -->
@@ -18,6 +19,10 @@
 
 	<!-- Bootstrap core CSS -->
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css" integrity="sha384-/Y6pD6FV/Vv2HJnA6t+vslU6fwYXjCFtcEpHbNJ0lyAFsXTsjBbfaDjzALeQsN6M" crossorigin="anonymous">
+
+	<!-- CSS for icons-->
+	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
+	<link rel="stylesheet" href="https://cdn.rawgit.com/jpswalsh/academicons/master/css/academicons.min.css">
 	
 	<!-- Custom styles for this template -->
 	<link href="files/jumbotron.css" rel="stylesheet">
@@ -73,16 +78,29 @@
 				<img class="img-responsive img-rounded" src="files/panlu.jpg" alt="" style="max-width: 240px; border:1px solid black"><br>
 			</div>
 			<div class="col-md-9">
-			<br>
+				<br>
+				<p>I am a first year PhD student in Computer Science Department, University of California, Los Angeles. I become a member of  <a href="https://vcla.stat.ucla.edu/" target="_blank">Center for Vision, Cognition, Learning and Autonomy</a>, 2019. My supervisor is Professor <a href="http://www.stat.ucla.edu/~sczhu/" target="_blank"> Song-Chun Zhu</a>. Before that, I received my Science Master degree in Department of Computer Science and Technology of Tsinghua University, supervised by Professor <a href="http://dbgroup.cs.tsinghua.edu.cn/wangjy/" target="_blank">Jianyong Wang</a>. I received my B.S. degree in School of Automation, Beijing Institute of Technology (BIT), 2015. 
+				</p>
 
-			<p>I am a first year PhD student in Computer Science Department, University of California, Los Angeles. I become a member of  <a href="https://vcla.stat.ucla.edu/" target="_blank">Center for Vision, Cognition, Learning and Autonomy</a>, 2019. My supervisor is Professor <a href="http://www.stat.ucla.edu/~sczhu/" target="_blank"> Song-Chun Zhu</a>. Before that, I received my Science Master degree in Department of Computer Science and Technology of Tsinghua University, supervised by Professor <a href="http://dbgroup.cs.tsinghua.edu.cn/wangjy/" target="_blank">Jianyong Wang</a>. I received my B.S. degree in School of Automation, Beijing Institute of Technology (BIT), 2015. 
-			</p>
+				<p>I was a research intern with the NLC Group, MSRA from Nov. 2017 to May 2018, working with Dr. <a href="https://www.microsoft.com/en-us/research/people/leiji/" target="_blank">Lei Ji</a>, <a href="https://www.microsoft.com/en-us/research/people/nanduan/" target="_blank">Nan Duan</a> and <a href="https://www.microsoft.com/en-us/research/people/mingzhou/" target="_blank">Ming Zhou</a>. Before that, I was a visiting student with <a href="http://mmlab.ie.cuhk.edu.hk/index.html" target="_blank">Multimedia Laboratory, CUHK</a> from Aug 2016 to Oct 2017, working with Professor <a href="http://www.ee.cuhk.edu.hk/~hsli/" target="_blank">Hongsheng Li</a> and <a href="http://www.ee.cuhk.edu.hk/~xgwang/" target="_blank">Xiaogang Wang</a>.
+				</p>
 
-			<p>I was a research intern with the NLC Group, MSRA from Nov. 2017 to May 2018, working with Dr. <a href="https://www.microsoft.com/en-us/research/people/leiji/" target="_blank">Lei Ji</a>, <a href="https://www.microsoft.com/en-us/research/people/nanduan/" target="_blank">Nan Duan</a> and <a href="https://www.microsoft.com/en-us/research/people/mingzhou/" target="_blank">Ming Zhou</a>. Before that, I was a visiting student with <a href="http://mmlab.ie.cuhk.edu.hk/index.html" target="_blank">Multimedia Laboratory, CUHK</a> from Aug 2016 to Oct 2017, working with Professor <a href="http://www.ee.cuhk.edu.hk/~hsli/" target="_blank">Hongsheng Li</a> and <a href="http://www.ee.cuhk.edu.hk/~xgwang/" target="_blank">Xiaogang Wang</a>.
-			</p>
+				<p>I am interested in <strong>computer vision</strong>, <strong>natural language understanding</strong>, <strong>data mining</strong>, especially in multimodal learning and reasoning for vision, language, knowledge, cognition and action.
+				</p>	
 
-			<p>I am interested in <strong>computer vision</strong>, <strong>natural language understanding</strong>, <strong>data mining</strong>, especially in multimodal learning and reasoning for vision, language, knowledge, cognition and action.
-			</p>	
+				<!-- Icons -->
+				<div style="font-size: 19px;">
+					<!-- icon size: large fa-2x, small, fa-lg -->
+					<a href="mailto:lupantech@gmail.com"><font color="gray"><i class="fas fa-envelope fa-lg"></i></font></a>&emsp;
+					<a target="_blank" href="https://scholar.google.com/citations?user=IyucsdQAAAAJ&hl=en"><font color="gray"><i class="ai ai-google-scholar ai-lg"></i></font></a>&emsp;
+					<a target="_blank" href="https://github.com/lupantech"><font color="gray"><i class="fab fa-github fa-lg"></i></font></a>&emsp;
+					<a target="_blank" href="https://twitter.com/lupantech"><font color="gray"><i class="fab fa-twitter fa-lg"></i></font></a>&emsp;
+					<a target="_blank" href="https://www.linkedin.com/in/pan-lu-9308909a/"><font color="gray"><i class="fab fa-linkedin fa-lg"></i></font></a>&emsp;
+					<!-- <a target="_blank" href="https://www.facebook.com/xxx"><font color="black"><i class="fab fa-facebook-square fa-lg"></i></font></a>&nbsp;&nbsp;&nbsp;&nbsp; -->
+					<!-- <a target="_blank" href="files/CV_Pan Lu.pdf"><font color="black"><i class="ai ai-cv ai-lg"></i></font></a> -->
+				</div>
+
+
 
 			</div>
 		</div>
@@ -92,12 +110,15 @@
     <!-- News -->
 	<div class="container">
 		<h3 id="News" style="padding-top: 80px; margin-top: -80px;">News</h3>
-		<ul>
+		<hr><ul>
 			<li>
-				<strong>[11/2019]</strong> One full paper was accepted by AAAI 2020!
+				<strong>[11/2019]&nbsp;</strong> One paper on personalized image caption is accepted to <b>AAAI 2020</b>.
 			</li>
 			<li>
-				<strong>[09/2019]</strong> Invited as ICDM 2019 External Reviewer.
+				<strong>[05/2019]</strong> One paper on knowledge aware image-text matching is accepted to <b>IJCAI 2019</b>.
+			</li>
+			<li>
+				<strong>[03/2019]</strong> One paper on dynamic fusion for visual question answering is accepted to <b>CVPR 2019</b> as an <b><font color="red">Oral Presentation</font></b>.
 			</li>
 		</ul>
 	</div><br>
@@ -105,19 +126,19 @@
 
 	<!-- Publications -->
 	<div class="container">
-		<h3 id="Publications" style="padding-top: 80px; margin-top: -80px;">Publications</h3>
+		<h3 id="Publications" style="padding-top: 80px; margin-top: -80px;">Publications</h3><hr>
 		<!-- <font color="black">(* indicate equal contribution)</font><br><hr> -->
 
 		<!-- AAAI20 -->
 		<div class="row">
 			<div class="col-md-3">
-				<img class="img-fluid img-rounded" src="imgs/aaai20_caption.png" style="border:1px solid black" alt="">
+				<img class="img-fluid img-rounded" src="imgs/aaai20_caption.png" style="border:1px solid gainsboro" alt="">
 			</div>
 			<div class="col-md-9">
 				<b><font color="black">Learning Long- and Short-Term User Literal-Preference with Multimodal Hierarchical Transformer Network for Personalized Image Caption</font></b><br>
 				<a>Wei Zhang, Yue Ying, <strong>Pan Lu</strong>, Hongyuan Zha</a><br>
-				<b><a href="https://aaai.org/Conferences/AAAI-20/" target="_blank">AAAI 2020</a></b>
-				<a href="papers/aaai20_caption.pdf" target="_blank"> <small>[Paper]</small></a>
+				<b><a href="https://aaai.org/Conferences/AAAI-20/" target="_blank">AAAI 2020&nbsp;</a></b>
+				<a href="papers/aaai20_caption.pdf" target="_blank"> <small>[Paper]&nbsp;</small></a>
 				<a href="bibs/aaai20_caption.bib" target="_blank"> <small>[BibTex]</small></a><br>
 			</div>
 		</div><hr>
@@ -125,13 +146,13 @@
 		<!-- IJCAI19 -->
 		<div class="row">
 			<div class="col-md-3">
-				<img class="img-fluid img-rounded" src="imgs/ijcai19_matching.png" style="border:1px solid black" alt="">
+				<img class="img-fluid img-rounded" src="imgs/ijcai19_matching.png" style="border:1px solid gainsboro" alt="">
 			</div>
 			<div class="col-md-9">
 				<b><font color="black">Knowledge Aware Semantic Concept Expansion for Image-Text Matching</font></b><br>
 				<a>Botian Shi, Lei Ji, <strong>Pan Lu</strong>, Nan Duan</a><br>
-				<b><a href="https://ijcai19.org/" target="_blank">IJCAI 2019</a></b>
-				<a href="papers/ijcai19_matching.pdf" target="_blank"> <small>[Paper]</small></a>
+				<b><a href="https://ijcai19.org/" target="_blank">IJCAI 2019&nbsp;</a></b>
+				<a href="papers/ijcai19_matching.pdf" target="_blank"> <small>[Paper]&nbsp;</small></a>
 				<a href="bibs/ijcai19_matching.bib" target="_blank"> <small>[BibTex]</small></a><br>
 			</div>
 		</div><hr>
@@ -139,13 +160,13 @@
 		<!-- CVPR19 -->
 		<div class="row">
 			<div class="col-md-3">
-				<img class="img-fluid img-rounded" src="imgs/cvpr19_dynamicvqa.png" style="border:1px solid black" alt="">
+				<img class="img-fluid img-rounded" src="imgs/cvpr19_dynamicvqa.png" style="border:1px solid gainsboro" alt="">
 			</div>
 			<div class="col-md-9">
 				<b><font color="black">Dynamic Fusion with Intra- and Inter-modality Attention Flow for Visual Question Answering</font></b><br>
 				<a>Peng Gao, Zhengkai Jiang, Haoxuan You, <strong>Pan Lu</strong>, Steven CH Hoi, Xiaogang Wang, Hongsheng Li</a><br>
-				<b><a href="http://cvpr2019.thecvf.com/" target="_blank">CVPR 2019</a></b>
-				<a href="papers/cvpr19_dynamicvqa.pdf" target="_blank"> <small>[Paper]</small></a>
+				<b><a href="http://cvpr2019.thecvf.com/" target="_blank">CVPR 2019&nbsp;</a></b>
+				<a href="papers/cvpr19_dynamicvqa.pdf" target="_blank"> <small>[Paper]&nbsp;</small></a>
 				<a href="bibs/cvpr19_dynamicvqa.bib" target="_blank"> <small>[BibTex]</small></a><br>
 				<font color="firebrick"><b>Oral Presentation</b></font>
 			</div>
@@ -154,28 +175,27 @@
 		<!-- PAKDD19 -->
 		<div class="row">
 			<div class="col-md-3">
-				<img class="img-fluid img-rounded" src="imgs/pakdd2019_hybrid.png" style="border:1px solid black" alt="">
+				<img class="img-fluid img-rounded" src="imgs/pakdd2019_hybrid.png" style="border:1px solid gainsboro" alt="">
 			</div>
 			<div class="col-md-9">
 				<b><font color="black">A Novel Hybrid Sequential Model for Review-based Rating Prediction</font></b><br>
 				<a>Yuanquan Lu, Wei Zhang, <strong>Pan Lu</strong>, Jianyong Wang</a><br>
-				<b><a href="https://pakdd2019.medmeeting.org/en" target="_blank">PAKDD 2019</a></b>
-				<a href="papers/pakdd2019_hybrid.pdf" target="_blank"> <small>[Paper]</small></a>
+				<b><a href="https://pakdd2019.medmeeting.org/en" target="_blank">PAKDD 2019&nbsp;</a></b>
+				<a href="papers/pakdd2019_hybrid.pdf" target="_blank"> <small>[Paper]&nbsp;</small></a>
 				<a href="bibs/pakdd2019_hybrid.bib" target="_blank"> <small>[BibTex]</small></a><br>
-				<font color="firebrick"><b>Oral Presentation</b></font>
 			</div>
 		</div><hr>
 
 		<!-- ICDE19  -->
 		<div class="row">
 			<div class="col-md-3">
-				<img class="img-fluid img-rounded" src="imgs/icde19_knowledge.png" style="border:1px solid black" alt="">
+				<img class="img-fluid img-rounded" src="imgs/icde19_knowledge.png" style="border:1px solid gainsboro" alt="">
 			</div>
 			<div class="col-md-9">
 				<b><font color="black">Knowledge-Aware Deep Dual Networks for Text-Based Mortality Prediction</font></b><br>
 				<a>Ning Liu, <strong>Pan Lu</strong>, Wei Zhang, Jianyong Wang</a><br>
-				<b><a href="http://conferences.cis.umac.mo/icde2019/" target="_blank">ICDE 2019</a></b>
-				<a href="papers/icde19_knowledge.pdf" target="_blank"> <small>[Paper]</small></a>
+				<b><a href="http://conferences.cis.umac.mo/icde2019/" target="_blank">ICDE 2019&nbsp;</a></b>
+				<a href="papers/icde19_knowledge.pdf" target="_blank"> <small>[Paper]&nbsp;</small></a>
 				<a href="bibs/icde19_knowledge.bib" target="_blank"> <small>[BibTex]</small></a><br>
 			</div>
 		</div><hr>
@@ -183,13 +203,13 @@
 		<!-- ECCV18 -->
 		<div class="row">
 			<div class="col-md-3">
-				<img class="img-fluid img-rounded" src="imgs/eccv18_hybridvqa.png" style="border:1px solid black" alt="">
+				<img class="img-fluid img-rounded" src="imgs/eccv18_hybridvqa.png" style="border:1px solid gainsboro" alt="">
 			</div>
 			<div class="col-md-9">
 				<b><font color="black">Question-Guided Hybrid Convolution for Visual Question Answering</font></b><br>
 				<a>Peng Gao, Hongsheng Li, Shuang Li, <strong>Pan Lu</strong>, Yikang Li, Steven Hoi, Xiaogang Wang</a><br>
-				<b><a href="https://eccv2018.org/" target="_blank">ECCV 2018</a></b>
-				<a href="papers/eccv18_hybridvqa.pdf" target="_blank"> <small>[Paper]</small></a>
+				<b><a href="https://eccv2018.org/" target="_blank">ECCV 2018&nbsp;</a></b>
+				<a href="papers/eccv18_hybridvqa.pdf" target="_blank"> <small>[Paper]&nbsp;</small></a>
 				<a href="bibs/eccv18_hybridvqa.bib" target="_blank"> <small>[BibTex]</small></a><br>
 			</div>
 		</div><hr>
@@ -197,15 +217,15 @@
 		<!-- SIGKDD18 -->
 		<div class="row">
 			<div class="col-md-3">
-				<img class="img-fluid img-rounded" src="imgs/kdd18_rvqa.png" style="border:1px solid black" alt="">
+				<img class="img-fluid img-rounded" src="imgs/kdd18_rvqa.png" style="border:1px solid gainsboro" alt="">
 			</div>
 			<div class="col-md-9">
 				<b><font color="black">R-VQA: Learning Visual Relation Facts with Semantic Attention for Visual Question Answering</font></b><br>
 				<a><strong>Pan Lu</strong>, Lei Ji, Wei Zhang, Nan Duan, Ming Zhou, Jianyong Wang</a><br>
-				<b><a href="https://www.kdd.org/kdd2018/" target="_blank">SIGKDD 2018</a></b>
-				<a href="papers/kdd18_rvqa.pdf" target="_blank"> <small>[Paper]</small></a>
-				<a href="https://github.com/lupantech/rvqa" target="_blank"> <small>[Project]</small></a>
-				<a href="https://www.youtube.com/watch?v=OQoqpRuY4L4" target="_blank"> <small>[Video]</small></a>
+				<b><a href="https://www.kdd.org/kdd2018/" target="_blank">SIGKDD 2018&nbsp;</a></b>
+				<a href="papers/kdd18_rvqa.pdf" target="_blank"> <small>[Paper]&nbsp;</small></a>
+				<a href="https://github.com/lupantech/rvqa" target="_blank"> <small>[Project]&nbsp;</small></a>
+				<a href="https://www.youtube.com/watch?v=OQoqpRuY4L4" target="_blank"> <small>[Video]&nbsp;</small></a>
 				<a href="bibs/kdd18_rvqa.bib" target="_blank"> <small>[BibTex]</small></a><br>
 				<font color="firebrick"><b>Oral Presentation</b></font>
 			</div>
@@ -214,14 +234,14 @@
 		<!-- AAAI18 -->
 		<div class="row">
 			<div class="col-md-3">
-				<img class="img-fluid img-rounded" src="imgs/aaa18_dualvqa.png" style="border:1px solid black" alt="">
+				<img class="img-fluid img-rounded" src="imgs/aaa18_dualvqa.png" style="border:1px solid gainsboro" alt="">
 			</div>
 			<div class="col-md-9">
 				<b><font color="black">Co-attending Free-form Regions and Detections with Multi-modal Multiplicative Feature Embedding for Visual Question Answering</font></b><br>
 				<a><strong>Pan Lu</strong>, Hongsheng Li, Wei Zhang, Jianyong Wang, Xiaogang Wang</a><br>
-				<b><a href="https://aaai.org/Conferences/AAAI-18/" target="_blank">AAAI 2018</a></b>
-				<a href="papers/aaa18_dualvqa.pdf" target="_blank"> <small>[Paper]</small></a>
-				<a href="https://github.com/lupantech/rvqa" target="_blank"> <small>[Code]</small></a>
+				<b><a href="https://aaai.org/Conferences/AAAI-18/" target="_blank">AAAI 2018&nbsp;</a></b>
+				<a href="papers/aaa18_dualvqa.pdf" target="_blank"> <small>[Paper]&nbsp;</small></a>
+				<a href="https://github.com/lupantech/rvqa" target="_blank"> <small>[Code]&nbsp;</small></a>
 				<a href="bibs/aaa18_dualvqa.bib" target="_blank"> <small>[BibTex]</small></a><br>
 				<font color="firebrick"><b>Oral Presentation</b></font>
 			</div>
@@ -233,7 +253,7 @@
 	<!-- Education -->
 	<div class="container">
 		<h3 id="Education" style="padding-top: 80px; margin-top: -80px;">Education</h3>
-		<ul>
+		<hr><ul>
 			<li>
 				<strong>University of California, Los Angeles</strong>, 2019.9 - present<br>
 				Ph.D. Student in Computer Science
@@ -253,7 +273,7 @@
 	<!-- Experience -->
 	<div class="container">
 		<h3 id="Experience" style="padding-top: 80px; margin-top: -80px;">Experience</h3>
-		<ul>
+		<hr><ul>
 			<li>
 				<strong>Graduate Student Researcher</strong>, <em>Center for Vision, Cognition, Learning, and Autonomy</em>, <em> UCLA </em>, 2019.9 - present<br>
 				Advisor: Prof. <a href="http://www.stat.ucla.edu/~sczhu/" target="_blank">Song-Chun Zhu</a>
@@ -285,7 +305,7 @@
 	<!-- Teaching -->
 	<div class="container">
 		<h3 id="Teaching" style="padding-top: 80px; margin-top: -80px;">Teaching</h3>
-		<ul>
+		<hr><ul>
 			<li>
 				<strong>Course Assistant</strong>, <em>Tsinghua University</em>, 2017.9 - 2018.1 <br>
 				Data Mining: Theory and Algorithms
@@ -301,7 +321,7 @@
 	<!-- Awards -->
 	<div class="container">
 		<h3 id="Honors" style="padding-top: 80px; margin-top: -80px;">Selected Honors</h3>
-		<ul>
+		<hr><ul>
 			<li><strong>NeurIPS Travel Award</strong>, 2019</li>
 			<li><strong>ICCV Travel Award</strong>, 2019</li>
 			<li><strong>Outstanding Master Thesis Award</strong>, Tsinghua University, 2018</li>
@@ -321,7 +341,7 @@
 	<!-- Service -->
 	<div class="container">
 		<h3 id="Service" style="padding-top: 80px; margin-top: -80px;">Professional Service</h3>
-		<ul>
+		<hr><ul>
 			<li> <strong>Conference Reviewer</strong>: AAAI, ICDM</li>
 			<li> <strong>Journal Reviewer</strong>: 
 				<a href="http://www.ieee-jas.org/" target="_blank">IEEE/CAA JAS</a>, 
@@ -333,29 +353,26 @@
 
 	<!-- Contact -->
 	<div class="container">
-		<h3 id="Contact" style="padding-top: 80px; margin-top: -80px;">Contact</h3>
+		<h3 id="Contact" style="padding-top: 80px; margin-top: -80px;">Contact</h3><hr>
 		Center for Vision, Cognition, Learning and Autonomy (VCLA) <br>
 		Bolter Hall <br>
 		580 Portola Plaza <br>
 		Los Angeles, CA 90024 <br>
 		lupantech [at] gmail [dot] com <br>
 		<!-- <a href="mailto:lupantech@gmail.com">lupantech@gmail.com</a><br> -->
-		<a href="https://scholar.google.com/citations?user=IyucsdQAAAAJ&hl=en" target="_blank">[Google Scholar]</a>
-		<a href="https://github.com/lupantech" target="_blank">[Github]</a><br>
+		<a href="https://scholar.google.com/citations?user=IyucsdQAAAAJ&hl=en">[<span style="color:#0000ff">G</span><span style="color:#ff0000">o</span><span style="color:#ffd700">o</span><span style="color:#0000ff">g</span><span style="color:#008000">l</span><span style="color:#ff0000">e</span> Scholar]</a> &nbsp;| &nbsp;<a href="https://github.com/lupantech">[GitHub]</a> &nbsp;|&nbsp;
+		<a href="https://www.linkedin.com/in/pan-lu-9308909a/">[LinkedIn]</a>
 	</div>
 
 
 	<!-- Footer -->
-	<!-- <div class="container">
-		<hr>
-		<center>
+    <div class="container">
+    	<hr>
+		<!-- <center>
 			<footer>
 				<p>&copy; Pan Lu 2019</p>
 			</footer>
-		</center>
-	</div> -->
-    <div class="container">
-        <hr>
+		</center> -->
         <div class="row">
             <div class="col-md-9">
                 <p align="left">&copy; Pan Lu 2020</p>
