--- a/index.html
+++ b/index.html
@@ -20,12 +20,12 @@
 	<!-- Bootstrap core CSS -->
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css" integrity="sha384-/Y6pD6FV/Vv2HJnA6t+vslU6fwYXjCFtcEpHbNJ0lyAFsXTsjBbfaDjzALeQsN6M" crossorigin="anonymous">
 
-	<!-- CSS for icons-->
+	<!-- Icon CSS-->
 	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
 	<link rel="stylesheet" href="https://cdn.rawgit.com/jpswalsh/academicons/master/css/academicons.min.css">
 	
 	<!-- Custom styles for this template -->
-	<link href="files/jumbotron.css" rel="stylesheet">
+	<link rel="stylesheet" href="files/panlu.css">
 </head>
 
 
@@ -109,7 +109,7 @@
 
     <!-- News -->
 	<div class="container">
-		<h3 id="News" style="padding-top: 80px; margin-top: -80px;">News</h3>
+		<h3 id="News" style="">News</h3>
 		<hr><ul>
 			<li>
 				<strong>[11/2019]&nbsp;</strong> One paper on personalized image caption is accepted to <b>AAAI 2020</b>.
@@ -126,48 +126,48 @@
 
 	<!-- Publications -->
 	<div class="container">
-		<h3 id="Publications" style="padding-top: 80px; margin-top: -80px;">Publications</h3><hr>
+		<h3 id="Publications" style="">Publications</h3><hr>
 		<!-- <font color="black">(* indicate equal contribution)</font><br><hr> -->
 
 		<!-- AAAI20 -->
 		<div class="row">
 			<div class="col-md-3">
-				<img class="img-fluid img-rounded" src="imgs/aaai20_caption.png" style="border:1px solid gainsboro" alt="">
+				<img class="img-fluid img-rounded" src="imgs/aaai20_caption.png" style="" alt="">
 			</div>
 			<div class="col-md-9">
 				<b><font color="black">Learning Long- and Short-Term User Literal-Preference with Multimodal Hierarchical Transformer Network for Personalized Image Caption</font></b><br>
 				<a>Wei Zhang, Yue Ying, <strong>Pan Lu</strong>, Hongyuan Zha</a><br>
 				<b><a href="https://aaai.org/Conferences/AAAI-20/" target="_blank">AAAI 2020&nbsp;</a></b>
 				<a href="papers/aaai20_caption.pdf" target="_blank"> <small>[Paper]&nbsp;</small></a>
-				<a href="bibs/aaai20_caption.bib" target="_blank"> <small>[BibTex]</small></a><br>
+				<a href="static/aaai20_caption.bib" target="_blank"> <small>[BibTex]</small></a><br>
 			</div>
 		</div><hr>
 
 		<!-- IJCAI19 -->
 		<div class="row">
 			<div class="col-md-3">
-				<img class="img-fluid img-rounded" src="imgs/ijcai19_matching.png" style="border:1px solid gainsboro" alt="">
+				<img class="img-fluid img-rounded" src="imgs/ijcai19_matching.png" style="" alt="">
 			</div>
 			<div class="col-md-9">
 				<b><font color="black">Knowledge Aware Semantic Concept Expansion for Image-Text Matching</font></b><br>
 				<a>Botian Shi, Lei Ji, <strong>Pan Lu</strong>, Nan Duan</a><br>
 				<b><a href="https://ijcai19.org/" target="_blank">IJCAI 2019&nbsp;</a></b>
 				<a href="papers/ijcai19_matching.pdf" target="_blank"> <small>[Paper]&nbsp;</small></a>
-				<a href="bibs/ijcai19_matching.bib" target="_blank"> <small>[BibTex]</small></a><br>
+				<a href="static/ijcai19_matching.bib" target="_blank"> <small>[BibTex]</small></a><br>
 			</div>
 		</div><hr>
 
 		<!-- CVPR19 -->
 		<div class="row">
 			<div class="col-md-3">
-				<img class="img-fluid img-rounded" src="imgs/cvpr19_dynamicvqa.png" style="border:1px solid gainsboro" alt="">
+				<img class="img-fluid img-rounded" src="imgs/cvpr19_dynamicvqa.png" style="" alt="">
 			</div>
 			<div class="col-md-9">
 				<b><font color="black">Dynamic Fusion with Intra- and Inter-modality Attention Flow for Visual Question Answering</font></b><br>
 				<a>Peng Gao, Zhengkai Jiang, Haoxuan You, <strong>Pan Lu</strong>, Steven CH Hoi, Xiaogang Wang, Hongsheng Li</a><br>
 				<b><a href="http://cvpr2019.thecvf.com/" target="_blank">CVPR 2019&nbsp;</a></b>
 				<a href="papers/cvpr19_dynamicvqa.pdf" target="_blank"> <small>[Paper]&nbsp;</small></a>
-				<a href="bibs/cvpr19_dynamicvqa.bib" target="_blank"> <small>[BibTex]</small></a><br>
+				<a href="static/cvpr19_dynamicvqa.bib" target="_blank"> <small>[BibTex]</small></a><br>
 				<font color="firebrick"><b>Oral Presentation</b></font>
 			</div>
 		</div><hr>
@@ -175,49 +175,49 @@
 		<!-- PAKDD19 -->
 		<div class="row">
 			<div class="col-md-3">
-				<img class="img-fluid img-rounded" src="imgs/pakdd2019_hybrid.png" style="border:1px solid gainsboro" alt="">
+				<img class="img-fluid img-rounded" src="imgs/pakdd2019_hybrid.png" style="" alt="">
 			</div>
 			<div class="col-md-9">
 				<b><font color="black">A Novel Hybrid Sequential Model for Review-based Rating Prediction</font></b><br>
 				<a>Yuanquan Lu, Wei Zhang, <strong>Pan Lu</strong>, Jianyong Wang</a><br>
 				<b><a href="https://pakdd2019.medmeeting.org/en" target="_blank">PAKDD 2019&nbsp;</a></b>
 				<a href="papers/pakdd2019_hybrid.pdf" target="_blank"> <small>[Paper]&nbsp;</small></a>
-				<a href="bibs/pakdd2019_hybrid.bib" target="_blank"> <small>[BibTex]</small></a><br>
+				<a href="static/pakdd2019_hybrid.bib" target="_blank"> <small>[BibTex]</small></a><br>
 			</div>
 		</div><hr>
 
 		<!-- ICDE19  -->
 		<div class="row">
 			<div class="col-md-3">
-				<img class="img-fluid img-rounded" src="imgs/icde19_knowledge.png" style="border:1px solid gainsboro" alt="">
+				<img class="img-fluid img-rounded" src="imgs/icde19_knowledge.png" style="" alt="">
 			</div>
 			<div class="col-md-9">
 				<b><font color="black">Knowledge-Aware Deep Dual Networks for Text-Based Mortality Prediction</font></b><br>
 				<a>Ning Liu, <strong>Pan Lu</strong>, Wei Zhang, Jianyong Wang</a><br>
 				<b><a href="http://conferences.cis.umac.mo/icde2019/" target="_blank">ICDE 2019&nbsp;</a></b>
 				<a href="papers/icde19_knowledge.pdf" target="_blank"> <small>[Paper]&nbsp;</small></a>
-				<a href="bibs/icde19_knowledge.bib" target="_blank"> <small>[BibTex]</small></a><br>
+				<a href="static/icde19_knowledge.bib" target="_blank"> <small>[BibTex]</small></a><br>
 			</div>
 		</div><hr>
 
 		<!-- ECCV18 -->
 		<div class="row">
 			<div class="col-md-3">
-				<img class="img-fluid img-rounded" src="imgs/eccv18_hybridvqa.png" style="border:1px solid gainsboro" alt="">
+				<img class="img-fluid img-rounded" src="imgs/eccv18_hybridvqa.png" style="" alt="">
 			</div>
 			<div class="col-md-9">
 				<b><font color="black">Question-Guided Hybrid Convolution for Visual Question Answering</font></b><br>
 				<a>Peng Gao, Hongsheng Li, Shuang Li, <strong>Pan Lu</strong>, Yikang Li, Steven Hoi, Xiaogang Wang</a><br>
 				<b><a href="https://eccv2018.org/" target="_blank">ECCV 2018&nbsp;</a></b>
 				<a href="papers/eccv18_hybridvqa.pdf" target="_blank"> <small>[Paper]&nbsp;</small></a>
-				<a href="bibs/eccv18_hybridvqa.bib" target="_blank"> <small>[BibTex]</small></a><br>
+				<a href="static/eccv18_hybridvqa.bib" target="_blank"> <small>[BibTex]</small></a><br>
 			</div>
 		</div><hr>
 
 		<!-- SIGKDD18 -->
 		<div class="row">
 			<div class="col-md-3">
-				<img class="img-fluid img-rounded" src="imgs/kdd18_rvqa.png" style="border:1px solid gainsboro" alt="">
+				<img class="img-fluid img-rounded" src="imgs/kdd18_rvqa.png" style="" alt="">
 			</div>
 			<div class="col-md-9">
 				<b><font color="black">R-VQA: Learning Visual Relation Facts with Semantic Attention for Visual Question Answering</font></b><br>
@@ -226,7 +226,7 @@
 				<a href="papers/kdd18_rvqa.pdf" target="_blank"> <small>[Paper]&nbsp;</small></a>
 				<a href="https://github.com/lupantech/rvqa" target="_blank"> <small>[Project]&nbsp;</small></a>
 				<a href="https://www.youtube.com/watch?v=OQoqpRuY4L4" target="_blank"> <small>[Video]&nbsp;</small></a>
-				<a href="bibs/kdd18_rvqa.bib" target="_blank"> <small>[BibTex]</small></a><br>
+				<a href="static/kdd18_rvqa.bib" target="_blank"> <small>[BibTex]</small></a><br>
 				<font color="firebrick"><b>Oral Presentation</b></font>
 			</div>
 		</div><hr>
@@ -234,15 +234,15 @@
 		<!-- AAAI18 -->
 		<div class="row">
 			<div class="col-md-3">
-				<img class="img-fluid img-rounded" src="imgs/aaa18_dualvqa.png" style="border:1px solid gainsboro" alt="">
+				<img class="img-fluid img-rounded" src="imgs/aaa18_dualvqa.png" style="" alt="">
 			</div>
 			<div class="col-md-9">
 				<b><font color="black">Co-attending Free-form Regions and Detections with Multi-modal Multiplicative Feature Embedding for Visual Question Answering</font></b><br>
 				<a><strong>Pan Lu</strong>, Hongsheng Li, Wei Zhang, Jianyong Wang, Xiaogang Wang</a><br>
 				<b><a href="https://aaai.org/Conferences/AAAI-18/" target="_blank">AAAI 2018&nbsp;</a></b>
 				<a href="papers/aaa18_dualvqa.pdf" target="_blank"> <small>[Paper]&nbsp;</small></a>
-				<a href="https://github.com/lupantech/rvqa" target="_blank"> <small>[Code]&nbsp;</small></a>
-				<a href="bibs/aaa18_dualvqa.bib" target="_blank"> <small>[BibTex]</small></a><br>
+				<a href="https://github.com/lupantech/dual-mfa-vqa" target="_blank"> <small>[Code]&nbsp;</small></a>
+				<a href="static/aaa18_dualvqa.bib" target="_blank"> <small>[BibTex]</small></a><br>
 				<font color="firebrick"><b>Oral Presentation</b></font>
 			</div>
 		</div><hr>
@@ -252,7 +252,7 @@
 
 	<!-- Education -->
 	<div class="container">
-		<h3 id="Education" style="padding-top: 80px; margin-top: -80px;">Education</h3>
+		<h3 id="Education" style="">Education</h3>
 		<hr><ul>
 			<li>
 				<strong>University of California, Los Angeles</strong>, 2019.9 - present<br>
@@ -272,14 +272,14 @@
 
 	<!-- Experience -->
 	<div class="container">
-		<h3 id="Experience" style="padding-top: 80px; margin-top: -80px;">Experience</h3>
+		<h3 id="Experience" style="">Experience</h3>
 		<hr><ul>
 			<li>
-				<strong>Graduate Student Researcher</strong>, <em>Center for Vision, Cognition, Learning, and Autonomy</em>, <em> UCLA </em>, 2019.9 - present<br>
+				<strong>Graduate Student Researcher</strong>, <em>Center for Vision, Cognition, Learning, and Autonomy</em>, <em>UCLA</em>, 2019.9 - present<br>
 				Advisor: Prof. <a href="http://www.stat.ucla.edu/~sczhu/" target="_blank">Song-Chun Zhu</a>
 			</li>
 			<li>
-				<strong>Researcher Intern</strong>, <em>Basemodel Group</em>, <em>Megvii Technology</em>, 2019.3 - 2018.8 <br>
+				<strong>Researcher Intern</strong>, <em>Basemodel Group</em>, <em>Face++ Technology</em>, 2019.3 - 2018.8 <br>
 				Advisors: Dr. <a href="https://scholar.google.com/citations?user=yuB-cfoAAAAJ&hl=en" target="_blank">Xiangyu Zhang</a>
 			</li>
 			<li>
@@ -304,7 +304,7 @@
 
 	<!-- Teaching -->
 	<div class="container">
-		<h3 id="Teaching" style="padding-top: 80px; margin-top: -80px;">Teaching</h3>
+		<h3 id="Teaching" style="">Teaching</h3>
 		<hr><ul>
 			<li>
 				<strong>Course Assistant</strong>, <em>Tsinghua University</em>, 2017.9 - 2018.1 <br>
@@ -320,7 +320,7 @@
 
 	<!-- Awards -->
 	<div class="container">
-		<h3 id="Honors" style="padding-top: 80px; margin-top: -80px;">Selected Honors</h3>
+		<h3 id="Honors" style="">Selected Honors</h3>
 		<hr><ul>
 			<li><strong>NeurIPS Travel Award</strong>, 2019</li>
 			<li><strong>ICCV Travel Award</strong>, 2019</li>
@@ -329,7 +329,7 @@
 			<li><strong>"Stars of Tomorrow" Excellent Intern Award</strong>, Microsoft Research, 2018</li>
 			<li><strong>AAAI Travel Award</strong>, 2017</li>
 			<li><strong>GuangHua Scholarship Award</strong>, Tsinghua University, 2016</li>
-			<li><strong>Outstanding Undergraduate of Beijing</strong>, 2015</li>
+			<li><strong>Outstanding Undergraduate, Beijing</strong>, 2015</li>
 			<li><strong>Champion of National College Student Innovation Conference</strong>, 2014</li>
 			<li><strong>National Scholarship</strong> (<em>for top 2% students</em>), 2014</li>
 			<li><strong>First Prize of America Mathematical Contest In Modeling (MCM)</strong>, 2014</li>
@@ -340,7 +340,7 @@
 
 	<!-- Service -->
 	<div class="container">
-		<h3 id="Service" style="padding-top: 80px; margin-top: -80px;">Professional Service</h3>
+		<h3 id="Service" style="">Professional Service</h3>
 		<hr><ul>
 			<li> <strong>Conference Reviewer</strong>: AAAI, ICDM</li>
 			<li> <strong>Journal Reviewer</strong>: 
@@ -353,15 +353,15 @@
 
 	<!-- Contact -->
 	<div class="container">
-		<h3 id="Contact" style="padding-top: 80px; margin-top: -80px;">Contact</h3><hr>
+		<h3 id="Contact" style="">Contact</h3><hr>
 		Center for Vision, Cognition, Learning and Autonomy (VCLA) <br>
 		Bolter Hall <br>
 		580 Portola Plaza <br>
 		Los Angeles, CA 90024 <br>
 		lupantech [at] gmail [dot] com <br>
 		<!-- <a href="mailto:lupantech@gmail.com">lupantech@gmail.com</a><br> -->
-		<a href="https://scholar.google.com/citations?user=IyucsdQAAAAJ&hl=en">[<span style="color:#0000ff">G</span><span style="color:#ff0000">o</span><span style="color:#ffd700">o</span><span style="color:#0000ff">g</span><span style="color:#008000">l</span><span style="color:#ff0000">e</span> Scholar]</a> &nbsp;| &nbsp;<a href="https://github.com/lupantech">[GitHub]</a> &nbsp;|&nbsp;
-		<a href="https://www.linkedin.com/in/pan-lu-9308909a/">[LinkedIn]</a>
+		<a href="https://scholar.google.com/citations?user=IyucsdQAAAAJ&hl=en" target="_blank">[<span style="color:#0000ff">G</span><span style="color:#ff0000">o</span><span style="color:#ffd700">o</span><span style="color:#0000ff">g</span><span style="color:#008000">l</span><span style="color:#ff0000">e</span> Scholar]</a> &nbsp;| &nbsp;<a href="https://github.com/lupantech" target="_blank">[GitHub]</a> &nbsp;|&nbsp;
+		<a href="https://www.linkedin.com/in/pan-lu-9308909a/" target="_blank">[LinkedIn]</a>
 	</div>
 
 
