--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
 				<strong>[11/2019]&nbsp;</strong> One paper on personalized image caption is accepted to <b>AAAI 2020</b>.
 			</li>
 			<li>
-				<strong>[05/2019]</strong> One paper on knowledge aware image-text matching is accepted to <b>IJCAI 2019</b>.
+				<strong>[05/2019]</strong> One paper on knowledge aware image-text matching is accepted to <b>IJCAI 2019</b> as an <b><font color="red">Oral Presentation</font></b>.
 			</li>
 			<li>
 				<strong>[03/2019]</strong> One paper on dynamic fusion for visual question answering is accepted to <b>CVPR 2019</b> as an <b><font color="red">Oral Presentation</font></b>.
@@ -154,6 +154,7 @@
 				<b><a href="https://ijcai19.org/" target="_blank">IJCAI 2019&nbsp;</a></b>
 				<a href="papers/ijcai19_matching.pdf" target="_blank"> <small>[Paper]&nbsp;</small></a>
 				<a href="bibs/ijcai19_matching.bib" target="_blank"> <small>[BibTex]</small></a><br>
+				<font color="firebrick"><b>Oral Presentation</b></font>
 			</div>
 		</div><hr>
 
