--- a/index.html
+++ b/index.html
@@ -281,7 +281,7 @@
 				Advisor: Prof. <a href="http://www.stat.ucla.edu/~sczhu/" target="_blank">Song-Chun Zhu</a>
 			</li>
 			<li>
-				<strong>Researcher Intern</strong>, <em>Basemodel Group</em>, <em>Face++ Technology</em>, 2019.3 - 2018.8 <br>
+				<strong>Researcher Intern</strong>, <em>Basemodel Group</em>, <em>Face Plus</em>, 2019.3 - 2018.8 <br>
 				Advisors: Dr. <a href="https://scholar.google.com/citations?user=yuB-cfoAAAAJ&hl=en" target="_blank">Xiangyu Zhang</a>
 			</li>
 			<li>
