update google color

--- a/index.html
+++ b/index.html
@@ -362,7 +362,7 @@
 		Los Angeles, CA 90024 <br>
 		lupantech [at] gmail [dot] com <br>
 		<!-- <a href="mailto:lupantech@gmail.com">lupantech@gmail.com</a><br> -->
-		<a href="https://scholar.google.com/citations?user=IyucsdQAAAAJ&hl=en" target="_blank">[<span style="color:#0000ff">G</span><span style="color:#ff0000">o</span><span style="color:#ffd700">o</span><span style="color:#0000ff">g</span><span style="color:#008000">l</span><span style="color:#ff0000">e</span> Scholar]</a> &nbsp;| &nbsp;<a href="https://github.com/lupantech" target="_blank">[GitHub]</a> &nbsp;|&nbsp;
+		<a href="https://scholar.google.com/citations?user=IyucsdQAAAAJ&hl=en" target="_blank">[<span style="color:#4285F4">G</span><span style="color:#DB4437">o</span><span style="color:#F4B400">o</span><span style="color:#4285F4">g</span><span style="color:#0F9D58">l</span><span style="color:#DB4437">e</span> Scholar]</a> &nbsp;| &nbsp;<a href="https://github.com/lupantech" target="_blank">[GitHub]</a> &nbsp;|&nbsp;
 		<a href="https://www.linkedin.com/in/pan-lu-9308909a/" target="_blank">[LinkedIn]</a>
 	</div>
 
