--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <!-- Color: https://htmlcolorcodes.com/zh/yanse-ming/ -->
 
 <head>
+	<link rel="shortcut icon" href="files/ucla.jpg" />
 	<!-- Global site tag (gtag.js) - Google Analytics -->
 	<script async src="https://www.googletagmanager.com/gtag/js?id=UA-111713571-1"></script>
 	<script>
