--- a/index.html
+++ b/index.html
@@ -330,7 +330,7 @@
 			<li><strong>Outstanding Master Thesis Award</strong>, Tsinghua University, 2018</li>
 			<li><strong>SIGKDD Travel Award</strong>, 2018</li>
 			<li><strong>"Stars of Tomorrow" Excellent Intern Award</strong>, Microsoft Research, 2018</li>
-			<li><strong>AAAI Travel Award</strong>, 2017</li>
+			<li><strong>AAAI Travel Award</strong>, 2018, 2020</li>
 			<li><strong>GuangHua Scholarship Award</strong>, Tsinghua University, 2016</li>
 			<li><strong>Outstanding Undergraduate, Beijing</strong>, 2015</li>
 			<li><strong>Champion of National College Student Innovation Conference</strong>, 2014</li>
