--- a/index.html
+++ b/index.html
@@ -345,7 +345,7 @@
 	<div class="container">
 		<h3 id="Service" style="">Professional Service</h3>
 		<hr><ul>
-			<li> <strong>Conference Reviewer</strong>: CVPR, AAAI, SIGKDD, ICDM, PAKDD</li>
+			<li> <strong>Conference Reviewer</strong>: NeurIPS 2020, CVPR, AAAI, SIGKDD, ICDM, PAKDD</li>
 			<li> <strong>Journal Reviewer</strong>: 
 				<a href="http://www.ieee-jas.org/" target="_blank">IEEE/CAA JAS</a>, 
 				<a href="http://www.aas.net.cn/CN/volumn/current.shtml" target="_blank">AAS</a>
