--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
 			</div>
 			<div class="col-md-9">
 				<br>
-				<p>I am a first year PhD student in Computer Science Department, University of California, Los Angeles. I become a member of  <a href="https://vcla.stat.ucla.edu/" target="_blank">Center for Vision, Cognition, Learning and Autonomy</a>, 2019. My supervisor is Professor <a href="http://www.stat.ucla.edu/~sczhu/" target="_blank"> Song-Chun Zhu</a>. Before that, I received my Science Master degree in Department of Computer Science and Technology of Tsinghua University, supervised by Professor <a href="http://dbgroup.cs.tsinghua.edu.cn/wangjy/" target="_blank">Jianyong Wang</a>. I received my B.S. degree in School of Automation, Beijing Institute of Technology (BIT), 2015. 
+				<p>I am a first year PhD student in Computer Science Department, University of California, Los Angeles. I become a member of  <a href="https://vcla.stat.ucla.edu/" target="_blank">Center for Vision, Cognition, Learning and Autonomy</a>, 2019. My supervisor is Professor <a href="http://www.stat.ucla.edu/~sczhu/" target="_blank"> Song-Chun Zhu</a>. Before that, I received my Science Master degree in Department of Computer Science and Technology of Tsinghua University, supervised by Professor <a href="http://dbgroup.cs.tsinghua.edu.cn/wangjy/" target="_blank">Jianyong Wang</a>. I received my B.S. degree in School of Automation, 2015. 
 				</p>
 
 				<p>I was a research intern with the NLC Group, MSRA from Nov. 2017 to May 2018, working with Dr. <a href="https://www.microsoft.com/en-us/research/people/leiji/" target="_blank">Lei Ji</a>, <a href="https://www.microsoft.com/en-us/research/people/nanduan/" target="_blank">Nan Duan</a> and <a href="https://www.microsoft.com/en-us/research/people/mingzhou/" target="_blank">Ming Zhou</a>. Before that, I was a visiting student with <a href="http://mmlab.ie.cuhk.edu.hk/index.html" target="_blank">Multimedia Laboratory, CUHK</a> from Aug 2016 to Oct 2017, working with Professor <a href="http://www.ee.cuhk.edu.hk/~hsli/" target="_blank">Hongsheng Li</a> and <a href="http://www.ee.cuhk.edu.hk/~xgwang/" target="_blank">Xiaogang Wang</a>.
@@ -265,10 +265,6 @@
 				<strong>Tsinghua University</strong>, 2015.8 - 2018.7<br>
 				M.Eng. in Computer Science
 			</li>
-			<li>
-				<strong>Beijing Institute of Technology</strong>, 2011.8 - 2015.6<br>
-				B.S. in Electrical Engineering (Automation)
-			</li>
 		</ul>
 	</div><br>
 
@@ -336,7 +332,6 @@
 			<li><strong>Champion of National College Student Innovation Conference</strong>, 2014</li>
 			<li><strong>National Scholarship</strong> (<em>for top 2% students</em>), 2014</li>
 			<li><strong>First Prize of America Mathematical Contest In Modeling (MCM)</strong>, 2014</li>
-			<li><strong>President Scholarship Award</strong>, Beijing Institute of Technology (<em>for top 2 undergraduates</em>), 2013</li>
 		</ul>
 	</div><br>
 
@@ -396,4 +391,5 @@
 
 </body>
 </html>
+
 
