--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
 			</div>
 			<div class="col-md-9">
 				<br>
-				<p>I am a first year PhD student in Computer Science Department, University of California, Los Angeles. I become a member of  <a href="https://vcla.stat.ucla.edu/" target="_blank">Center for Vision, Cognition, Learning and Autonomy</a>, 2019. My supervisor is Professor <a href="http://www.stat.ucla.edu/~sczhu/" target="_blank"> Song-Chun Zhu</a>. Before that, I received my Science Master degree in Department of Computer Science and Technology of Tsinghua University, supervised by Professor <a href="http://dbgroup.cs.tsinghua.edu.cn/wangjy/" target="_blank">Jianyong Wang</a>. I received my B.S. degree in School of Automation, 2015. 
+				<p>I am a second year PhD student in Computer Science Department, University of California, Los Angeles. I become a member of  <a href="https://vcla.stat.ucla.edu/" target="_blank">Center for Vision, Cognition, Learning and Autonomy</a>, 2019. My supervisor is Professor <a href="http://www.stat.ucla.edu/~sczhu/" target="_blank"> Song-Chun Zhu</a>. Before that, I received my Science Master degree in Department of Computer Science and Technology of Tsinghua University, supervised by Professor <a href="http://dbgroup.cs.tsinghua.edu.cn/wangjy/" target="_blank">Jianyong Wang</a>. I received my B.S. degree in School of Automation, 2015. 
 				</p>
 
 				<p>I was a research intern with the NLC Group, MSRA from Nov. 2017 to May 2018, working with Dr. <a href="https://www.microsoft.com/en-us/research/people/leiji/" target="_blank">Lei Ji</a>, <a href="https://www.microsoft.com/en-us/research/people/nanduan/" target="_blank">Nan Duan</a> and <a href="https://www.microsoft.com/en-us/research/people/mingzhou/" target="_blank">Ming Zhou</a>. Before that, I was a visiting student with <a href="http://mmlab.ie.cuhk.edu.hk/index.html" target="_blank">Multimedia Laboratory, CUHK</a> from Aug 2016 to Oct 2017, working with Professor <a href="http://www.ee.cuhk.edu.hk/~hsli/" target="_blank">Hongsheng Li</a> and <a href="http://www.ee.cuhk.edu.hk/~xgwang/" target="_blank">Xiaogang Wang</a>.
@@ -129,6 +129,20 @@
 	<div class="container">
 		<h3 id="Publications" style="">Publications</h3><hr>
 		<!-- <font color="black">(* indicate equal contribution)</font><br><hr> -->
+
+		<!-- Mind -->
+		<div class="row">
+			<div class="col-md-3">
+				<img class="img-fluid img-rounded" src="imgs/arxiv21_mind.png" style="" alt="">
+			</div>
+			<div class="col-md-9">
+				<b><font color="black">Towards Socially Intelligent Agents with Mental State Transition and Human Utility</font></b><br>
+				<a>Liang Qiu, Yizhou Zhao, Yuan Liang, <b>Pan Lu</b>, Weiyan Shi, Zhou Yu, Song-Chun Zhu</a><br>
+				<b><a href="https://arxiv.org/abs/2103.07011" target="_blank">arXiv:2103.07011&nbsp;</a></b>
+				<a href="https://arxiv.org/pdf/2103.07011.pdf" target="_blank"> <small>[Paper]&nbsp;</small></a>
+				<a href="bibs/arxiv21_mind.txt" target="_blank"> <small>[BibTex]</small></a><br>
+			</div>
+		</div><hr>
 
 		<!-- AAAI20 -->
 		<div class="row">
@@ -340,8 +354,7 @@
 	<div class="container">
 		<h3 id="Service" style="">Professional Service</h3>
 		<hr><ul>
-			<li> <strong>Program Committee Member</strong>: NeurIPS 2020</li>
-			<li> <strong>Conference Reviewer</strong>: CVPR, AAAI, SIGKDD, ICDM, PAKDD</li>
+			<li> <strong>Program Committee Member</strong>: ICLR-21, CVPR-21, NeurIPS-20, AAAI, SIGKDD, ICDM, PAKDD</li>
 			<li> <strong>Journal Reviewer</strong>: 
 				<a href="http://www.ieee-jas.org/" target="_blank">IEEE/CAA JAS</a>, 
 				<a href="http://www.aas.net.cn/CN/volumn/current.shtml" target="_blank">AAS</a>
@@ -374,7 +387,7 @@
 		</center> -->
         <div class="row">
             <div class="col-md-9">
-                <p align="left">&copy; Pan Lu 2020</p>
+                <p align="left">&copy; Pan Lu 2021</p>
             </div>
             <div class="col-md-3">
                 <script type="text/javascript" id="clustrmaps" src="//cdn.clustrmaps.com/map_v2.js?d=kM7hb210psDEOVXSuHck6GmcfISVxTpZ0I6EmgBHZMQ&cl=ffffff&w=a"></script>
