--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
 				<a>Wei Zhang, Yue Ying, <strong>Pan Lu</strong>, Hongyuan Zha</a><br>
 				<b><a href="https://aaai.org/Conferences/AAAI-20/" target="_blank">AAAI 2020&nbsp;</a></b>
 				<a href="papers/aaai20_caption.pdf" target="_blank"> <small>[Paper]&nbsp;</small></a>
-				<a href="bibs/aaai20_caption.bib" target="_blank"> <small>[BibTex]</small></a><br>
+				<a href="bibs/aaai20_caption.txt" target="_blank"> <small>[BibTex]</small></a><br>
 			</div>
 		</div><hr>
 
@@ -168,7 +168,7 @@
 				<a>Botian Shi, Lei Ji, <strong>Pan Lu</strong>, Nan Duan</a><br>
 				<b><a href="https://ijcai19.org/" target="_blank">IJCAI 2019&nbsp;</a></b>
 				<a href="papers/ijcai19_matching.pdf" target="_blank"> <small>[Paper]&nbsp;</small></a>
-				<a href="bibs/ijcai19_matching.bib" target="_blank"> <small>[BibTex]</small></a><br>
+				<a href="bibs/ijcai19_matching.txt" target="_blank"> <small>[BibTex]</small></a><br>
 				<font color="firebrick"><b>Oral Presentation</b></font>
 			</div>
 		</div><hr>
@@ -184,7 +184,7 @@
 				<b><a href="http://cvpr2019.thecvf.com/" target="_blank">CVPR 2019&nbsp;</a></b>
 				<a href="papers/cvpr19_dynamicvqa.pdf" target="_blank"> <small>[Paper]&nbsp;</small></a>
 				<a href="https://github.com/bupt-cist/DFAF-for-VQA.pytorch" target="_blank"> <small>[Code]&nbsp;</small></a>
-				<a href="bibs/cvpr19_dynamicvqa.bib" target="_blank"> <small>[BibTex]</small></a><br>
+				<a href="bibs/cvpr19_dynamicvqa.txt" target="_blank"> <small>[BibTex]</small></a><br>
 				<font color="firebrick"><b>Oral Presentation</b></font>
 			</div>
 		</div><hr>
@@ -199,7 +199,7 @@
 				<a>Yuanquan Lu, Wei Zhang, <strong>Pan Lu</strong>, Jianyong Wang</a><br>
 				<b><a href="https://pakdd2019.medmeeting.org/en" target="_blank">PAKDD 2019&nbsp;</a></b>
 				<a href="papers/pakdd2019_hybrid.pdf" target="_blank"> <small>[Paper]&nbsp;</small></a>
-				<a href="bibs/pakdd2019_hybrid.bib" target="_blank"> <small>[BibTex]</small></a><br>
+				<a href="bibs/pakdd2019_hybrid.txt" target="_blank"> <small>[BibTex]</small></a><br>
 			</div>
 		</div><hr>
 
@@ -213,7 +213,7 @@
 				<a>Ning Liu, <strong>Pan Lu</strong>, Wei Zhang, Jianyong Wang</a><br>
 				<b><a href="http://conferences.cis.umac.mo/icde2019/" target="_blank">ICDE 2019&nbsp;</a></b>
 				<a href="papers/icde19_knowledge.pdf" target="_blank"> <small>[Paper]&nbsp;</small></a>
-				<a href="bibs/icde19_knowledge.bib" target="_blank"> <small>[BibTex]</small></a><br>
+				<a href="bibs/icde19_knowledge.txt" target="_blank"> <small>[BibTex]</small></a><br>
 			</div>
 		</div><hr>
 
@@ -227,7 +227,7 @@
 				<a>Peng Gao, Hongsheng Li, Shuang Li, <strong>Pan Lu</strong>, Yikang Li, Steven Hoi, Xiaogang Wang</a><br>
 				<b><a href="https://eccv2018.org/" target="_blank">ECCV 2018&nbsp;</a></b>
 				<a href="papers/eccv18_hybridvqa.pdf" target="_blank"> <small>[Paper]&nbsp;</small></a>
-				<a href="bibs/eccv18_hybridvqa.bib" target="_blank"> <small>[BibTex]</small></a><br>
+				<a href="bibs/eccv18_hybridvqa.txt" target="_blank"> <small>[BibTex]</small></a><br>
 			</div>
 		</div><hr>
 
@@ -243,7 +243,7 @@
 				<a href="papers/kdd18_rvqa.pdf" target="_blank"> <small>[Paper]&nbsp;</small></a>
 				<a href="https://github.com/lupantech/rvqa" target="_blank"> <small>[Project]&nbsp;</small></a>
 				<a href="https://www.youtube.com/watch?v=OQoqpRuY4L4" target="_blank"> <small>[Video]&nbsp;</small></a>
-				<a href="bibs/kdd18_rvqa.bib" target="_blank"> <small>[BibTex]</small></a><br>
+				<a href="bibs/kdd18_rvqa.txt" target="_blank"> <small>[BibTex]</small></a><br>
 				<font color="firebrick"><b>Oral Presentation</b></font>
 			</div>
 		</div><hr>
@@ -259,7 +259,7 @@
 				<b><a href="https://aaai.org/Conferences/AAAI-18/" target="_blank">AAAI 2018&nbsp;</a></b>
 				<a href="papers/aaa18_dualvqa.pdf" target="_blank"> <small>[Paper]&nbsp;</small></a>
 				<a href="https://github.com/lupantech/dual-mfa-vqa" target="_blank"> <small>[Code]&nbsp;</small></a>
-				<a href="bibs/aaa18_dualvqa.bib" target="_blank"> <small>[BibTex]</small></a><br>
+				<a href="bibs/aaa18_dualvqa.txt" target="_blank"> <small>[BibTex]</small></a><br>
 				<font color="firebrick"><b>Oral Presentation</b></font>
 			</div>
 		</div><hr>
