update font size and typos

--- a/index.html
+++ b/index.html
@@ -30,13 +30,20 @@
 </head>
 
 
+ <style>
+	h3{
+	font-size: 30px;
+	}
+ </style>
+
+
 <title>Pan Lu</title>
 
 
-<body>
+<body style="font-size: 18px">
 	<!-- Navigation Labels -->
 	<!-- <nav class="navbar navbar-expand-md navbar-dark fixed-top" style="background-color: #003262;"> -->
-	<nav class="navbar navbar-expand-md navbar-dark fixed-top" style="background-color: #003262;">
+	<nav class="navbar navbar-expand-md navbar-dark fixed-top" style="background-color: #003262; font-size: 22px">
 
 		<a class="navbar-brand" href="#">Pan Lu</a>
 
@@ -72,7 +79,7 @@
 	</nav>
 
 	<!-- Who am I -->
-	<div class="container" style="padding-top: 20px; font-size: 18px">
+	<div class="container" style="padding-top: 30px; font-size: 18px">
 		<div class="row">
 			<div class="col-md-3", style="padding-right: 40px">
 				<br>
@@ -80,17 +87,17 @@
 			</div>
 			<div class="col-md-9">
 				<br>
-				<p>I am a second year PhD student in Computer Science Department, University of California, Los Angeles. I become a member of  <a href="https://vcla.stat.ucla.edu/" target="_blank">Center for Vision, Cognition, Learning and Autonomy</a>, 2019. My supervisor is Professor <a href="http://www.stat.ucla.edu/~sczhu/" target="_blank"> Song-Chun Zhu</a>. Before that, I received my Science Master degree in Department of Computer Science and Technology of Tsinghua University, supervised by Professor <a href="http://dbgroup.cs.tsinghua.edu.cn/wangjy/" target="_blank">Jianyong Wang</a>. I received my B.S. degree in School of Automation, 2015. 
+				<p>I am a second-year PhD student in the Computer Science Department, University of California, Los Angeles. I become a member of  <a href="https://vcla.stat.ucla.edu/" target="_blank">Center for Vision, Cognition, Learning and Autonomy</a>, 2019. My supervisor is Professor <a href="http://www.stat.ucla.edu/~sczhu/" target="_blank"> Song-Chun Zhu</a>. Before that, I received my Science Master degree in the Department of Computer Science and Technology of Tsinghua University, supervised by Professor <a href="http://dbgroup.cs.tsinghua.edu.cn/wangjy/" target="_blank">Jianyong Wang</a>. I received my B.S. degree from the School of Automation, 2015. 
 				</p>
 
-				<p>I was a research intern with the NLC Group, MSRA from Nov. 2017 to May 2018, working with Dr. <a href="https://www.microsoft.com/en-us/research/people/leiji/" target="_blank">Lei Ji</a>, <a href="https://www.microsoft.com/en-us/research/people/nanduan/" target="_blank">Nan Duan</a> and <a href="https://www.microsoft.com/en-us/research/people/mingzhou/" target="_blank">Ming Zhou</a>. Before that, I was a visiting student with <a href="http://mmlab.ie.cuhk.edu.hk/index.html" target="_blank">Multimedia Laboratory, CUHK</a> from Aug 2016 to Oct 2017, working with Professor <a href="http://www.ee.cuhk.edu.hk/~hsli/" target="_blank">Hongsheng Li</a> and <a href="http://www.ee.cuhk.edu.hk/~xgwang/" target="_blank">Xiaogang Wang</a>.
+				<p>I was a research intern with the NLC Group, MSRA from Nov. 2017 to May 2018, working with Dr. <a href="https://www.microsoft.com/en-us/research/people/leiji/" target="_blank">Lei Ji</a>, <a href="https://www.microsoft.com/en-us/research/people/nanduan/" target="_blank">Nan Duan</a>, and <a href="https://www.microsoft.com/en-us/research/people/mingzhou/" target="_blank">Ming Zhou</a>. Before that, I was a visiting student with <a href="http://mmlab.ie.cuhk.edu.hk/index.html" target="_blank">Multimedia Laboratory, CUHK</a> from Aug 2016 to Oct 2017, working with Professor <a href="http://www.ee.cuhk.edu.hk/~hsli/" target="_blank">Hongsheng Li</a> and <a href="http://www.ee.cuhk.edu.hk/~xgwang/" target="_blank">Xiaogang Wang</a>.
 				</p>
 
-				<p>I am interested in <strong>computer vision</strong>, <strong>natural language understanding</strong>, <strong>data mining</strong>, especially in multimodal learning and reasoning for vision, language, knowledge, cognition and action.
+				<p>I am interested in <strong>computer vision</strong>, <strong>natural language understanding</strong>, <strong>data mining</strong>, especially in multimodal learning and reasoning for vision, language, knowledge, and cognition.
 				</p>	
 
 				<!-- Icons -->
-				<div style="font-size: 19px;">
+				<div style="font-size: 20px;">
 					<!-- icon size: large fa-2x, small, fa-lg -->
 					<a href="mailto:lupantech@gmail.com"><font color="gray"><i class="fas fa-envelope fa-lg"></i></font></a>&emsp;
 					<a target="_blank" href="https://scholar.google.com/citations?user=IyucsdQAAAAJ&hl=en"><font color="gray"><i class="ai ai-google-scholar ai-lg"></i></font></a>&emsp;
@@ -112,6 +119,9 @@
 	<div class="container">
 		<h3 id="News" style="">News</h3>
 		<hr><ul>
+			<li>
+				<strong>[03/2021]&nbsp;</strong> One paper on socially intelligent agents is submitted to <b>Preprint</b>.
+			</li>
 			<li>
 				<strong>[11/2019]&nbsp;</strong> One paper on personalized image caption is accepted to <b>AAAI 2020</b>.
 			</li>
