--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 	<!-- <nav class="navbar navbar-expand-md navbar-dark fixed-top" style="background-color: #003262;"> -->
 	<nav class="navbar navbar-expand-md navbar-dark fixed-top" style="background-color: #003262; font-size: 22px">
 
-		<a class="navbar-brand" href="#">Pan Lu</a>
+		<a class="navbar-brand" href="#" style="font-size: 22px">Pan Lu</a>
 
 		<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarToggle">
 	  		<span class="navbar-toggler-icon"></span>
